# cmake-sfml-demo

./: .gitignore  README.md
Boilerplate/: CMakeLists.txt  config.h.in  main.cpp
Pong/: CMakeLists.txt  license.md
Pong/include/: Ball.h  Bat.h  config.h.in
Pong/src/: Ball.cpp  Bat.cpp  main.cpp
